--- a/tutorials/Lesson03_Styling_Plot.ipynb
+++ b/tutorials/Lesson03_Styling_Plot.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -34,24 +34,364 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "  country                                        description  \\\n0      US  This tremendous 100% varietal wine hails from ...   \n1   Spain  Ripe aromas of fig, blackberry and cassis are ...   \n2      US  Mac Watson honors the memory of a wine once ma...   \n\n                            designation  points  price        province  \\\n0                     Martha's Vineyard      96  235.0      California   \n1  Carodorum Selección Especial Reserva      96  110.0  Northern Spain   \n2         Special Selected Late Harvest      96   90.0      California   \n\n         region_1 region_2             variety                   winery  \n0     Napa Valley     Napa  Cabernet Sauvignon                    Heitz  \n1            Toro      NaN       Tinta de Toro  Bodega Carmen Rodríguez  \n2  Knights Valley   Sonoma     Sauvignon Blanc                 Macauley  ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>country</th>\n      <th>description</th>\n      <th>designation</th>\n      <th>points</th>\n      <th>price</th>\n      <th>province</th>\n      <th>region_1</th>\n      <th>region_2</th>\n      <th>variety</th>\n      <th>winery</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>US</td>\n      <td>This tremendous 100% varietal wine hails from ...</td>\n      <td>Martha's Vineyard</td>\n      <td>96</td>\n      <td>235.0</td>\n      <td>California</td>\n      <td>Napa Valley</td>\n      <td>Napa</td>\n      <td>Cabernet Sauvignon</td>\n      <td>Heitz</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Spain</td>\n      <td>Ripe aromas of fig, blackberry and cassis are ...</td>\n      <td>Carodorum Selección Especial Reserva</td>\n      <td>96</td>\n      <td>110.0</td>\n      <td>Northern Spain</td>\n      <td>Toro</td>\n      <td>NaN</td>\n      <td>Tinta de Toro</td>\n      <td>Bodega Carmen Rodríguez</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>US</td>\n      <td>Mac Watson honors the memory of a wine once ma...</td>\n      <td>Special Selected Late Harvest</td>\n      <td>96</td>\n      <td>90.0</td>\n      <td>California</td>\n      <td>Knights Valley</td>\n      <td>Sonoma</td>\n      <td>Sauvignon Blanc</td>\n      <td>Macauley</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "root_path=\"https://minio.lab.sspcloud.fr/pengfei/diffusion/data_viz\"\n",
     "\n",
     "input_file=f'{root_path}/winemag-data_first150k.csv'\n",
     "reviews=pd.read_csv(input_file,index_col=0)\n",
     "reviews.head(3)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 3.1 Set up plot size\n",
+    "\n",
+    "Below figure shows a bar plot of the vin score(points column) with default\n",
+    "settings."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "vin_points=reviews['points'].value_counts().sort_index()\n",
+    "vin_points.plot.bar()\n",
+    "plt.show()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "We could say the plot is too small to see, we want to make it big\n",
+    "we can use **figsize(width, height)** parameter to define the size of plot\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "vin_points.plot.bar(figsize=(12,6))\n",
+    "plt.show()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 3.2 Change bar color\n",
+    "\n",
+    "Now, we want to change the color of bars. We can use **color='color_value'**. The color_value is a string, the possible value could be (mediumvioletred, red, yellow, etc)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "vin_points.plot.bar(figsize=(12,6),color='red')\n",
+    "plt.show()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 3.3 Change the text fontsize\n",
+    "\n",
+    "The text label are very hard to read, we can change the fontsize with **fontsize** parameter."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "vin_points.plot.bar(figsize=(12,6),color='yellow',fontsize=16)\n",
+    "plt.show()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 3.4 Add a title to the plot\n",
+    "\n",
+    "We can add title by using the parameter **title**."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "vin_points.plot.bar(figsize=(12, 6), color='mediumvioletred', fontsize=16, title='Rankings Given by Wine Magazine')\n",
+    "plt.show()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 3.5 Use matplotlib function\n",
+    "\n",
+    "Pandas data visu is built based on matplotlib, so all the plot build with pandas can use also the function of matplotlib\n",
+    "\n",
+    "The following example we will use matplotlib function to set title with a bigger font size"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "my_plot=vin_points.plot.bar(figsize=(12, 6), color='mediumvioletred', fontsize=16)\n",
+    "my_plot.set_title(\"Rankings Given by Wine Magazine\",fontsize=20)\n",
+    "plt.show()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 3.6 Seaborn function\n",
+    "\n",
+    "We can use another lib called seaborn which is also built based on matplotlib"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "my_plot=vin_points.plot.bar(figsize=(12, 6), color='mediumvioletred', fontsize=16)\n",
+    "\n",
+    "my_plot.set_title(\"Rankings Given by Wine Magazine\",fontsize=20)\n",
+    "\n",
+    "# sns.despine method to turn off the ugly black border.\n",
+    "sns.despine(bottom=False,left=True)\n",
+    "\n",
+    "plt.show()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 3.7 Exercises\n",
+    "\n",
+    "Now let's test what we have learned with some exercise."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "pokemon_input_file=f'{root_path}/Pokemon.csv'\n",
+    "pokemon=pd.read_csv(pokemon_input_file,index_col=0)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "pokemon.head()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Q1. Make a scatter plot on attack and defence\n",
+    "\n",
+    "We wants to see the relation between attack and defence of the pokemons.\n",
+    "First the plot must be visible and then add a title to your plot"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "attack_defense_plot=pokemon.plot.scatter(x='Attack',y='Defense',figsize=(16,9),title='Pokemon by Attack and Defense')\n",
+    "plt.show()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Q2 Make a histogram\n",
+    "\n",
+    "Make a histogram of the pokemon's total score, then change the color of the histogram"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "print(pokemon.dtypes)\n",
+    "print(pokemon['Total'].head())"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "ax = pokemon['Total'].plot.hist(figsize=(12, 6),fontsize=14,bins=50,color='red')\n",
+    "ax.set_title('Pokemon by Stat Total', fontsize=20)\n",
+    "plt.show()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "### Q3 bar plot of pokemon primary type without border\n",
+    "\n",
+    "pokemon_type_plot = pokemon['Type 1'].value_counts().plot.bar(figsize=(12,6),fontsize=14)\n",
+    "pokemon_type_plot.set_title(\"Rankings Given by Wine Magazine\",fontsize=20)\n",
+    "sns.despine(bottom=True, left=True)\n",
+    "plt.show()"
    ],
    "metadata": {
     "collapsed": false,
